--- a/views/note/index.html
+++ b/views/note/index.html
@@ -1,1 +1,30 @@
-<p>Hello World.</p>
+<div class="container" style="margin-top:15px">
+	<div class="row">		 
+        <div class="input-field">
+          <input id="search" type="search" required>
+          <label for="search"><i class="material-icons prefix">search</i></label>
+          <i class="material-icons">close</i>
+        </div>	     
+	</div>
+
+	<div class="row">
+		<div class="col s12 m4 13">
+			<div class="card amber darken-4">
+				<div class="card-content white-text">
+					<span class="card-title">To Do</span>
+					<p>Description</p>
+				</div>
+				<div class="card-action">
+					<a href="#"><i class="material-icons right">delete</i></a>
+					<a href="#"><i class="material-icons right">edit</i></a>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div class="fixed-action-btn horizontal click-to-toggle" style="bottom: 45px; right: 24px;">
+	<a class="btn-floating btn-large red" href="http://localhost/angular_client/#/notes/new">
+	  <i class="material-icons">add</i>
+	</a>
+</div>
