--- a/views/note/index.html
+++ b/views/note/index.html
@@ -1,18 +1,18 @@
 <div class="container" style="margin-top:15px">
 	<div class="row">		 
         <div class="input-field">
-          <input id="search" type="search" required>
+          <input id="search" type="search" ng-model="search">
           <label for="search"><i class="material-icons prefix">search</i></label>
           <i class="material-icons">close</i>
         </div>	     
 	</div>
 
 	<div class="row">
-		<div class="col s12 m4 13">
+		<div ng-repeat="Note in Notes | filter:search" class="col s12 m4 13">
 			<div class="card amber darken-4">
 				<div class="card-content white-text">
-					<span class="card-title">To Do</span>
-					<p>Description</p>
+					<span class="card-title">{{Note.name}}</span>
+					<p>{{Note.description}}</p>
 				</div>
 				<div class="card-action">
 					<a href="#"><i class="material-icons right">delete</i></a>
