--- a/views/note/index.html
+++ b/views/note/index.html
@@ -16,7 +16,7 @@
 				</div>
 				<div class="card-action">
 					<a href="#"><i class="material-icons right">delete</i></a>
-					<a href="#"><i class="material-icons right">edit</i></a>
+					<a href="#/notes/edit/{{Note.id}}"><i class="material-icons right">edit</i></a>
 				</div>
 			</div>
 		</div>
