--- a/views/note/index.html
+++ b/views/note/index.html
@@ -15,7 +15,7 @@
 					<p>{{Note.description}}</p>
 				</div>
 				<div class="card-action">
-					<a href="#"><i class="material-icons right">delete</i></a>
+					<a href="#" ng-click="removeNote(Note.id)"><i class="material-icons right">delete</i></a>
 					<a href="#/notes/edit/{{Note.id}}"><i class="material-icons right">edit</i></a>
 				</div>
 			</div>
